--- a/projeto_front_end_transfero-main/html/contato.html
+++ b/projeto_front_end_transfero-main/html/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/global.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/contato.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/loading.css">
     <title>Autentika-contato</title>
@@ -41,7 +42,22 @@
         </nav>
     </header>
     <main>
-
+        <section class="sobre-container">
+            <h2>Contatos Autentika</h2>
+            <p>
+               EMAIL:Atentika@.contatocom
+            </p>
+            <p>
+                NúMERO:99999-9999
+            </p>
+            <p>
+                ENDEREÇO:<br>
+                estado:rio de janiero<br> 
+                rua bilubilu<br>
+                 Nº:1<br>
+                
+            </p>
+        </section>
     </main>
     <footer>
         <section class="footer-container">
