--- a/projeto_front_end_transfero-main/html/home.html
+++ b/projeto_front_end_transfero-main/html/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/global.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/home.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/loading.css">
     <title>Autentika</title>
@@ -51,22 +52,22 @@
             <section class="servico">
                 <h2>Autenticação</h2>
                 <img src="/projeto_front_end_transfero-main/img/autenticaçao.jpg" alt="Autenticação">
-                <a href="#"><button>Saiba Mais</button></a>
+                <a href="autenticaçao.html"><button>Saiba Mais</button></a>
             </section>
             <section class="servico">
                 <h2>Reconhecimento de Firma</h2>
                 <img src="/projeto_front_end_transfero-main/img/reconhecimento.jpg" alt="Reconhecimento de Firma">
-                <a href="#"><button>Saiba Mais</button></a>
+                <a href="Reconhecimento_de_firma.html"><button>Saiba Mais</button></a>
             </section>
             <section class="servico">
                 <h2>Emitir Documentos</h2>
                 <img src="/projeto_front_end_transfero-main/img/documentos.jpg" alt="Emitir Documentos">
-                <a href="#"><button>Saiba Mais</button></a>
+                <a href="Emitir_Documentos.html"><button>Saiba Mais</button></a>
             </section>
             <section class="servico">
                 <h2>Certidões</h2>
                 <img src="/projeto_front_end_transfero-main/img/certidoes.jpg" alt="Certidões">
-                <a href="#"><button>Saiba Mais</button></a>
+                <a href="Certidoes.html"><button>Saiba Mais</button></a>
             </section>
         </section>
     </main>
