--- a/projeto_front_end_transfero-main/html/sobre.html
+++ b/projeto_front_end_transfero-main/html/sobre.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/global.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/sobre.css">
     <link rel="stylesheet" href="/projeto_front_end_transfero-main/css/loading.css">
     <title>Autentika - Sobre</title>
